sumo/tests/duarouter/routes/style1_input/errors/vehicle_false_arrivallane/errors.duarouter
Error: Invalid arrivalLane definition for vehicle '0'
Quitting (on error).
